add quantity of gadget and memory